# frontdesk

./: .gitignore  README.md  ROADMAP.md  license.txt  pyproject.toml
deploy/: README.md  apps.json  setup.sh
docs/: FEATURES.md  PLAN.md  STACK.md
frontdesk/: hooks.py  modules.txt
frontdesk/api/: availability.py  basira_crm.py  board.py  bookings.py  checkout.py  followups.py  notifications.py  reminders.py
frontdesk/config/: desktop.py  docs.py
frontdesk/frontdesk/doctype/booking/: booking.json  booking.py  overlap.py
frontdesk/frontdesk/doctype/business_settings/: business_settings.json  business_settings.py
frontdesk/frontdesk/doctype/customer_profile/: customer_profile.json  customer_profile.py
frontdesk/frontdesk/doctype/service/: service.json  service.py
frontdesk/frontdesk/doctype/staff_member/: staff_member.json  staff_member.py
frontdesk/frontdesk/doctype/staff_service/: staff_service.json  staff_service.py
frontdesk/frontdesk/doctype/staff_working_hour/: staff_working_hour.json  staff_working_hour.py
frontdesk/tests/: test_availability.py
frontdesk/www/: _branding.py  board.html  board.py  book.html  book.py  checkout.html  checkout.py  index.html  index.py  my_schedule.html  my_schedule.py
